# udp-video-transfer

./: .gitignore  CLAUDE.md  README.md
docs/: RECEIVER_README.md  SENDER_README.md  custom_udp_video_protocol_v1.1.md  env_check.md  jetson_orin_nano_receiver_architecture_v0.1.md  m1_receiver_test.md  m1_sender_test.md  m2_receiver_test.md  m2_test_plan.md  m3_decode_test_plan.md  m3_receiver_test.md  m4.2_test_result.md  m4_multi_channel_test.md  m4_receiver_multi_channel.md  m5_au_dump_verification.md  udp_sender_requirements_ffmpeg_python_c_test_v0.1.md  video_quality_fix_record.md
receiver/: CMakeLists.txt
receiver/include/: annexb_writer.hpp  channel_receiver.hpp  crc16.hpp  gst_decoder.hpp  idr_fsm.hpp  metrics.hpp  multi_channel_receiver.hpp  packet_header.hpp  reassembly.hpp
receiver/src/: annexb_writer.cpp  channel_receiver.cpp  crc16.cpp  gst_decoder.cpp  idr_fsm.cpp  main.cpp  metrics.cpp  multi_channel_receiver.cpp  packet_header.cpp  reassembly.cpp
sender/: multi_channel_send.sh  requirements.txt  udp_sender.py
sender_cpp/: CMakeLists.txt
sender_cpp/include/: crc16.hpp  h265_nal.hpp  protocol.hpp  udp_sender.hpp
sender_cpp/src/: crc16.cpp  h265_nal.cpp  main.cpp  protocol.cpp  udp_sender.cpp
sender_cpp/tests/: CMakeLists.txt  README.md  run_tests.sh  test_unit.cpp
tools/: compare_au_dump.py
